--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
                             <li><stong>Volo di Ritorno: </stong>Y1236X, ore 18.30 da London Heathrow</li>
                         </ul>
                 </ol>
+                <hr>
             </section>
     
             <!-- sezione "foto" -->
             <section id="foto">
-    
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto di londra">
+                <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto di londra">
             </section>
     </main>
 </body>
