--- a/index.html
+++ b/index.html
@@ -74,39 +74,24 @@
                     <li>
                         Numeri di emergenza
                         <ul>
-                            <li>
-                                <b>999</b> - Emergenza
-                            </li>
-                            <li>
-                                <b>101</b> - Numero polizia
-                            </li>
-                            <li>
-                                <b>111</b> - Numero assistenza medica
-                            </li>
+                            <li><b>999</b> - Emergenza</li>
+                            <li><b>101</b> - Numero polizia</li>
+                            <li><b>111</b> - Numero assistenza medica</li>
                         </ul>
                     </li>
                     <li>
                         Hotel
                         <ul>
-                            <li>
-                                <b>Nome Hotel: </b>Buckingham Palace
-                            </li>
-                            <li>
-                                <b>Indirizzo Hotel: </b>Westminster, London SW1A 1AA, Regno Unito
-                            </li>
+                            <li><b>Nome Hotel: </b>Buckingham Palace</li>
+                            <li><b>Indirizzo Hotel: </b>Westminster, London SW1A 1AA, Regno Unito</li>
                         </ul>    
                     </li>
                     <li>
                         aereo
                         <ul>
-                            <li>
-                                <b>Volo di Andata: </b>Y1234X, ore 9.30 da Milano Malpensa
-                            </li>
-                            <li>
-                                <b>Volo di Ritorno: </b>Y1236X, ore 18.30 da London Heathrow
-                            </li>
+                            <li><b>Volo di Andata: </b>Y1234X, ore 9.30 da Milano Malpensa</li>
+                            <li><b>Volo di Ritorno: </b>Y1236X, ore 18.30 da London Heathrow</li>
                         </ul>
-    
                     </li>
                 </ol>
                 <hr>
